gitops/kubernetes/manifests/app/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  labels:
    app: php-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate  
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      serviceAccountName: php-app
      terminationGracePeriodSeconds: 5
      containers:
      - name: web
        image: devinfrabr/laravel-app:latest
        ports:
          - name: http
            containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5   
          failureThreshold: 30
          periodSeconds: 10  
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5 
          failureThreshold: 30
          periodSeconds: 10 
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi      
        volumeMounts:
          - name: env-vars
            mountPath: /var/www/app/.env
            subPath: .env
      #nodeSelector:
      #  disktype: ssd
      #affinity:
      #  nodeAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #      nodeSelectorTerms:
      #      - matchExpressions:
      #        - key: node-type
      #          operator: In
      #          values:
      #          - nginx-node
      #  podAntiAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #    - labelSelector:
      #        matchExpressions:
      #        - key: app
      #          operator: In
      #          values:
      #          - nginx
      #      topologyKey: "kubernetes.io/hostname"  
      volumes:
      - name: env-vars
        configMap:
          name: php-app
