gitops/kubernetes/manifests/app/10-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app
spec:
  type: ClusterIP
  selector:
    app: php-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
